--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,8 @@
+<div class="container-fluid">
 
+
+  <div class="row justify-content-center">         
+ 
    <form class="form-signin col-md-2" [formGroup]="form">
       <img class="mb-4" src="../../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Acesse</h1>
@@ -14,3 +18,6 @@
       <button class="btn btn-lg btn-secondary btn-block" (click)="doLogin()">Conectar</button>
       <p class="mt-5 mb-3 text-muted">&copy;2018</p>
     </form>
+</div>
+
+</div>
