--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 
 <mat-sidenav-container>
 
-  <mat-sidenav #sidenav mode="side" [(opened)]="opened" >
+  <mat-sidenav #sidenav mode="side"  >
   
     <ul class="list-group">
             <li class="list-group-item sidebar-separator-title text-muted d-flex align-items-center menu-collapsed">
