--- a/src/app/edituser/edituser.component.html
+++ b/src/app/edituser/edituser.component.html
@@ -12,7 +12,7 @@
 	
 
       <div>
-      	<button type="button" class="btn btn-primary" data-dismiss="modal">Salvar</button>
+      	<button type="button" class="btn btn-primary" data-dismiss="modal" (click)="editUser()">Salvar</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
       </div>
       </form>
