--- a/src/app/edituser/edituser.component.html
+++ b/src/app/edituser/edituser.component.html
@@ -13,6 +13,6 @@
 
       <div>
       	<button type="button" class="btn btn-primary" data-dismiss="modal" (click)="editUser()">Salvar</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="back()">Fechar</button>
       </div>
       </form>
