--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,15 @@
 <div class="container-fluid">
-	<div class="row">
+	<div class="row" style="margin-top: 5px;">
                 <div class="col-lg-3 col-md-6">
                     <div class="card card-primary">
                         <div class="card-heading">
                             <div class="row">
                                 <div class="col-sm-3">
-                                    <i class="fa fa-comments fa-3x"></i>
+                                    <i class="fa fa-user fa-3x"></i>
                                 </div>
                                 <div class="col-sm-9 text-right">
                                     <div class="huge">26</div>
-                                    <div>Novos Comentários</div>
+                                    <div>Usuários Totais</div>
                                 </div>
                             </div>
                         </div>
@@ -89,7 +89,55 @@
                     </div>
                 </div>
             </div>
-		</div>
-			
+<br>
+            <div class="row">
+                <div class="col-md-8">
+                </div>
+                <div class="col-md-4">
+                    <div class="card card-default">
+                        <div class="card-header">
+                            <i class="fa fa-bell fa-fw"></i> Painel de Notificações
+                        </div>
+                        <div class="card-body">
+                            <div class="list-group">
+                                <a href="#" class="list-group-item">
+                                    <i class="fa fa-twitter fa-fw"></i> 3 Novos Usuários
+                                    <span class="float-right text-muted small"><em>12 minutos atrás</em>
+                                    </span>
+                                </a>
+                                <a href="#" class="list-group-item">
+                                    <i class="fa fa-tasks fa-fw"></i> Novas Tarefas
+                                    <span class="float-right text-muted small"><em>43 minutos atrás</em>
+                                    </span>
+                                </a>
+                                <a href="#" class="list-group-item">
+                                    <i class="fa fa-upload fa-fw"></i> Último Exame
+                                    <span class="float-right text-muted small"><em>11:32 AM</em>
+                                    </span>
+                                </a>
+                                <a href="#" class="list-group-item">
+                                    <i class="fa fa-bolt fa-fw"></i> Último Evento
+                                    <span class="float-right text-muted small"><em>11:13 AM</em>
+                                    </span>
+                                </a>
+                                <a href="#" class="list-group-item">
+                                    <i class="fa fa-warning fa-fw"></i> Último Treino
+                                    <span class="float-right text-muted small"><em>10:57 AM</em>
+                                    </span>
+                                </a>
+                                <a href="#" class="list-group-item">
+                                    <i class="fa fa-money fa-fw"></i> Pagamento Recebido
+                                    <span class="float-right text-muted small"><em>Ontem</em>
+                                    </span>
+                                </a>
+                            </div>
+                            <button href="#" class="btn btn-default btn-block">Ver todos</button>
+                        </div>
+                    </div>
+            </div>
+</div>
+
+
+
 			
 			
