--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid">
+<div class="container-fluid align-self-center h-100">
 
 
-  <div class="row justify-content-center" >         
+  <div class="row justify-content-center align-items-center h-100" >         
  
    <form class="form-signin col-sm-4 col-lg-3" [formGroup]="form">
       <img class="mb-4" src="../../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
