--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,9 +1,13 @@
+<div class="container-fluid">
+  <h3 class="section-title muted">Cadastrar Usuários</h3>
+
+<hr>
+
+
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" >
-  Cadastrar Novo Usuário
+<button type="button" class="btn btn-primary float-right" style="margin-bottom: 5px" data-toggle="modal" data-target="#exampleModal" >
+  Cadastrar Usuário
 </button>
-
-
 
 <table class="table table-bordered table-hover" >
   <thead class="thead-dark">
@@ -110,3 +114,4 @@
 </div>
 
 
+</div>
