--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,9 @@
 	<h5 style="color: white;">Virtual Dojo</h5>
 </nav>
 
-<mat-sidenav-container>
+<mat-sidenav-container class="h-100">
 
-  <mat-sidenav #sidenav mode="side">
+  <mat-sidenav #sidenav mode="side" class="h-100">
   
     <ul class="list-group">
             <li class="list-group-item sidebar-separator-title text-muted d-flex align-items-center menu-collapsed">
