--- a/src/app/edituser/edituser.component.html
+++ b/src/app/edituser/edituser.component.html
@@ -1,3 +1,8 @@
+<div class="container-fluid  h-100 flex-column">
+  <h3 class="section-title muted">Editar Usuário</h3>
+
+<hr>
+
   <form class="form-signin col-md-12" [formGroup]="form" >
       <img class="mb-4" src="../../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
       <label for="inputEmail" class="sr-only">Nome</label>
@@ -16,3 +21,5 @@
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="back()">Fechar</button>
       </div>
       </form>
+
+  </div>
