--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid align-self-center h-100">
+<div class="container-fluid align-self-center">
 
 
   <div class="row justify-content-center align-items-center h-100" >         
