--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid  h-100 flex-column">
   <h3 class="section-title muted">Cadastrar Usuários</h3>
 
 <hr>
