--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="#">
+                        <a (click)="goHome()">
                             <div class="card-footer">
                                 <span class="float-left">Ver Detalhes</span>
                                 <span class="float-right"><i class="fa fa-arrow-circle-right"></i></span>
